fix: truncate song title, authors

--- a/styles/spotify.module.sass
+++ b/styles/spotify.module.sass
@@ -13,6 +13,7 @@
   text-decoration: none
   box-shadow: 0 0 19px 1px rgb(#000, .35)
   -webkit-tap-highlight-color: transparent
+  overflow: hidden
   transition: all .24s ease-in-out
 
   @media screen and (max-width: variables.$mobile-width)
@@ -59,3 +60,4 @@
     .Progress
       height: 100%
       background-color: #1DB954
+      transition: all .2s ease-in
